k8s/alert-notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-notifier-system
  namespace: dsbd-ns
  labels:
    app: alert-notifier-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-notifier-system
  template:
    metadata:
      labels:
        app: alert-notifier-system
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: alert-notifier-system
          image: alert-notifier-system:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: metrics
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            #limits:
              #memory: "128Mi"
              #cpu: "200m"

# No need to use probes, since the only dependencies are Kafka and application code handles connections itself.
# If kafka dies and code crashes, k8s will restart the pod automatically.
