k8s/data-collector.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-collector
  namespace: dsbd-ns
  labels:
    app: data-collector
spec:
  type: ClusterIP
  ports:
    - port: 5001
      name: http
      targetPort: http
    - port: 50052
      name: grpc
      targetPort: grpc
  selector:
    app: data-collector

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-collector
  namespace: dsbd-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5001"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: data-collector
          image: data-collector:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
              name: http
            - containerPort: 50052
              name: grpc

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            #limits:
              #memory: "256Mi"
              #cpu: "500m"


          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 80 # Allows up to 800 (about 13 minutes) seconds for startup (waiting for DB)

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
