k8s/prometheus-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: dsbd-ns
spec:
  replicas: 1
  strategy:
    type: Recreate # This is important for Prometheus to avoid locking errors when using persistent storage with deployment updates
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus-sa
      terminationGracePeriodSeconds: 300
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          imagePullPolicy: IfNotPresent
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.external-url=/prometheus/"
            - "--web.enable-lifecycle"
          ports:
            - containerPort: 9090
          resources:
             requests:
               memory: "256Mi"
               cpu: "200m"
             #limits:
               #memory: "512Mi"
               #cpu: "500m"

          startupProbe:
            httpGet:
              path: /prometheus/-/healthy
              port: 9090
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 60 # 5 minutes is enough for Prometheus to start even with initial database setup, but just to be safe we allow a bit more time

          livenessProbe:
            httpGet:
              path: /prometheus/-/healthy
              port: 9090
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /prometheus/-/ready
              port: 9090
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 5

          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
            - name: storage-volume
              mountPath: /prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
        - name: storage-volume
          persistentVolumeClaim:
            claimName: prometheus-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: dsbd-ns
spec:
  selector:
    app: prometheus
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
