k8s/user-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-manager
  namespace: dsbd-ns
  labels:
    app: user-manager
spec:
  type: ClusterIP
  ports:
    - port: 5000
      name: http
      targetPort: http
    - port: 50051
      name: grpc
      targetPort: grpc
  selector:
    app: user-manager

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-manager
  namespace: dsbd-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-manager
  template:
    metadata:
      labels:
        app: user-manager
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: user-manager
          image: user-manager:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
            - containerPort: 50051
              name: grpc

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            #limits:
              #memory: "256Mi"
              #cpu: "500m"

          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 150 # Allows up to 1500 (about 25 minutes) seconds for startup (waiting for DB + 5 extra minutes)

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
